--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lua-iconv (0.r4-1) unstable; urgency=low
+
+  * New Debian packages according to the Debian Lua policy.
+
+ -- Alexandre Erwin Ittner <aittner@netuno.com.br>  Wed, 21 Feb 2007 22:00:00 -0200
+
+
 lua-iconv (0.r3-1) unstable; urgency=low
 
   * First release in .deb format.
