--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Lua-iconv: performs character set conversions in Lua
 (c) 2005-10 Alexandre Erwin Ittner <alexandre@ittner.com.br>
-Project page: http://lua-iconv.luaforge.net/
+Project page: http://ittner.github.com/lua-iconv/
 
 
 === Introduction ===
